Fixed some Css for tweet overflow.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -43,6 +43,7 @@ main .new-tweet {
   border-radius: 15px;
   padding: 0 20px 0 20px;
   position: relative;
+  /*height: 200px;*/
 }
 
 main .new-tweet h2{
@@ -68,6 +69,7 @@ main .new-tweet .counter{
   right: 20px;
   position: absolute;
   bottom: 0;
+  /*float: right;*/
 }
 
 
@@ -126,6 +128,7 @@ main #tweets .tweet p{
   padding-right: 10px;
   text-align: left;
   padding-left: 10px;
+  overflow-wrap: break-word;
 }
 
 main #tweets .tweet footer {
@@ -154,4 +157,14 @@ main #tweets .tweet:hover footer img {
 
 main #tweets .tweet footer img {
   display: none;
+}
+
+.nothing {
+  display: none;
+  color: red;
+}
+
+.tooLong {
+  display: none;
+  color: red;
 }
